--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="#ornaments"><button  class="btn btn-success">Book an Appointment</button  class="btn btn-success"></a>
             </div>
             <div class="col d-flex justify-content-center">
-                <img src="/images/banner.png" alt="banner" class="w-75">
+                <img src="https://i.ibb.co/pzVhyTy/banner.png" alt="banner" class="w-75">
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-4">
             <div class="col">
                 <div class="card text-center">
-                    <img src="/images/5.png" class="card-img-top w-75 m-auto" alt="looks">
+                    <img src="https://i.ibb.co/8mDmDjw/5.png" class="card-img-top w-75 m-auto" alt="looks">
                     <div class="card-body">
                         <h4 class="card-title">Bridal Makeup</h4>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -72,7 +72,7 @@
             </div>
             <div class="col">
                 <div class="card text-center">
-                    <img src="/images/2.jpg" class="card-img-top w-75 m-auto" alt="looks">
+                    <img src="https://i.ibb.co/RHsgsMJ/2.jpg" class="card-img-top w-75 m-auto" alt="looks">
                     <div class="card-body">
                         <h4 class="card-title">Party Makeup</h4>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
@@ -86,7 +86,7 @@
             </div>
             <div class="col">
                 <div class="card text-center">
-                    <img src="/images/1.jpg" class="card-img-top w-75 m-auto" alt="looks">
+                    <img src="https://i.ibb.co/3M7z2cV/1.jpg" class="card-img-top w-75 m-auto" alt="looks">
                     <div class="card-body">
                         <h4 class="card-title">Wedding Makeup</h4>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -100,7 +100,7 @@
             </div>
             <div class="col">
                 <div class="card text-center">
-                    <img src="/images/4.png" class="card-img-top w-75 m-auto" alt="looks">
+                    <img src="https://i.ibb.co/3hNXMyV/4.png" class="card-img-top w-75 m-auto" alt="looks">
                     <div class="card-body">
                         <h4 class="card-title">Simple Makeup</h4>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -114,7 +114,7 @@
             </div>
             <div class="col">
                 <div class="card text-center">
-                    <img src="/images/3.png" class="card-img-top w-75 m-auto" alt="looks">
+                    <img src="https://i.ibb.co/Gt4qPPX/3.png" class="card-img-top w-75 m-auto" alt="looks">
                     <div class="card-body">
                         <h4 class="card-title">Facial</h4>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -128,7 +128,7 @@
             </div>
             <div class="col">
                 <div class="card text-center">
-                    <img src="/images/6.png" class="card-img-top w-75 m-auto" alt="looks">
+                    <img src="https://i.ibb.co/xfJWqCD/6.png" class="card-img-top w-75 m-auto" alt="looks">
                     <div class="card-body">
                         <h4 class="card-title">Hair Cut</h4>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
