--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="py-5">
         <p class="text-center">© Supti's Parler, developed with <small>❤</small> by Iftakher Hossen 2022.</p>
     </footer>
 
